/*
Defines the protocol buffers for the Data Service Layer Server
cd into the dsl directory and run this
protoc -I ./ds-project/common/proto/models -I ./ds-project/common/proto/dsl dsl.proto --go_out=plugins=grpc:./
 */

syntax = "proto3";
package dsl;
import "models.proto";
option go_package = "ds-project/common/proto/dsl";

// Messages for posts

message AddPostRequest {
  string username = 1;
  string post = 2;
}

message AddPostResponse {
  bool ok = 1;
}

message GetPostsRequest {
  string username = 1;
}

message GetPostsResponse {
  repeated models.Post posts = 1;
}

// Messages for subscriptions

message GetSubscriptionsRequest {
  string username = 1;
}

message GetSubscriptionsResponse {
  repeated string subscriptions = 1;
}

message SubscribeRequest {
  string subscriber = 1;
  string publisher = 2;
}

message SubscribeResponse {
  bool ok = 1;
}

// Messages for auth

message SetAccessTokenRequest {
  string username = 1;
  string token = 2;
}

message AccessTokenRequest {
  string username = 1;
}

message GetAccessTokenResponse {
  string token = 1;
  bool ok = 2;
}

message UpdateAccessTokenResponse {
  bool ok = 1;
}

// Messages for users
message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  models.User user = 1;
  bool ok = 2;
}

message GetUsersRequest {

}

message GetUsersResponse {
  map<string, models.User> users = 1;
}

message CreateUserRequest {
  string username = 1;
  models.User user = 2;
}

message CreateUserResponse {
  bool ok = 1;
}

// DSL Service

service DataService {
  // Services related to posts
  rpc AddPost(AddPostRequest) returns (AddPostResponse);
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse);

  // Services related to subscriptions
  rpc GetSubscriptions(GetSubscriptionsRequest) returns (GetSubscriptionsResponse);
  rpc Subscribe(SubscribeRequest) returns (SubscribeResponse);
  rpc Unsubscribe(SubscribeRequest) returns (SubscribeResponse);

  // Services related to auth
  rpc SetAccessToken(SetAccessTokenRequest) returns (UpdateAccessTokenResponse);
  rpc GetAccessToken(AccessTokenRequest) returns (GetAccessTokenResponse);
  rpc DeleteAccessToken(AccessTokenRequest) returns (UpdateAccessTokenResponse);

  // Services related to users
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}